--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,70 @@ body{
 }
 
 .headerYfooter{
-    background: #2A77B5;
+    background-color: #2A77B5;
 }
 
 .hero{
+    border-top: 5px solid white;
+    border-right: 5px solid white;
+    border-left: 5px solid white;
+    border-bottom: 5px solid white;
+    
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    
     background: #E8524D;
+    height: 300px;
+
+    background-image: url(../Images/ErikL.png);
+    background-size: 300px;
+    background-repeat: no-repeat; 
+    background-position-x: right;
+}
+
+.UNO, .UNOpy, .LRC{
+    line-height: 3px;
+}
+
+p{
+    line-height: 20px;
+}
+
+.hero-title{
+    font-family: 'PT Sans Narrow';
+    text-transform: capitalize;
+    font-size: 35px;
+    line-height: 50px;
+    font-weight: 1000; 
+    color: white;
+
+    margin: 50px 300px 50px 50px;
+}
+
+
+a{
+    text-decoration: blink;
+}
+
+.proyecto-info{
+    width: 500px;
+}
+
+.headerYfooter a{
+    color: #ffffff;
+}
+
+article{
+    background-color: #F57E45;
+    border: #F57E45 2px solid;
+    border-radius:15px ;
+    margin: 10px;
+}
+
+article h3, h4, p{
+    color: white;
+}
+
+ol{
+    margin: 0px;
 }
