--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,6 @@ body{
     background-position-x: right;
 }
 
-.UNO, .UNOpy, .LRC{
-    line-height: 3px;
-}
-
 p{
     line-height: 20px;
 }
@@ -48,9 +44,6 @@ a{
     text-decoration: blink;
 }
 
-.proyecto-info{
-    width: 500px;
-}
 
 .headerYfooter a{
     color: #ffffff;
@@ -60,7 +53,8 @@ article{
     background-color: #F57E45;
     border: #F57E45 2px solid;
     border-radius:15px ;
-    margin: 10px;
+    padding: 10px;
+    margin: 20px;
 }
 
 article h3, h4, p{
@@ -69,4 +63,11 @@ article h3, h4, p{
 
 ol{
     margin: 0px;
+}
+
+article{
+    display: flex;
+}
+article figure img{
+    border: solid 5px white;
 }
