--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
     background: #E7EC65;
 }
 
-.headerYfooter{
+header, footer{
     background-color: #2A77B5;
 }
 
@@ -22,6 +22,10 @@ body{
     background-size: 300px;
     background-repeat: no-repeat; 
     background-position-x: right;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 p{
@@ -36,17 +40,13 @@ p{
     font-weight: 1000; 
     color: white;
 
-    margin: 50px 300px 50px 50px;
+    margin: 0px 300px 0px 10px;
+    
 }
 
 
 a{
     text-decoration: blink;
-}
-
-
-.headerYfooter a{
-    color: #ffffff;
 }
 
 article{
@@ -61,13 +61,111 @@ article h3, h4, p{
     color: white;
 }
 
-ol{
-    margin: 0px;
-}
-
 article{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
+
 article figure img{
     border: solid 5px white;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo{      
+    margin: 30px 0px 30px 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+header ol{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 20px ;
+}
+
+header li{
+    background: #E8524D;
+
+    padding: 5px 25px;
+    margin: 0px 10px;
+
+    justify-content: center;
+    
+    align-items: center;
+
+    border: solid 2px #E8524D;
+    border-radius: 5px;
+}
+
+li a{
+    font-family: 'PT Sans Narrow';
+    color: white;
+}
+
+ol, ul{
+    list-style: none;
+}
+
+section h2{
+    font-family: 'PT Sans Narrow';
+    font-size: 40px;
+    margin: 30px  0px 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.contacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #E8524D;
+
+    border-top: 5px solid white;
+    border-right: 5px solid white;
+    border-left: 5px solid white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.contacto form{
+    display: flex;
+    align-items: center;
+    padding: 5px 5px 5px 5px;
+    margin: 5px 5px 5px 5px; 
+}
+
+.contacto h1{
+    color: white;
+    font-family: 'PT Sans Narrow';
+    border: white 1px solid;
+    padding: 5px 5px 5px 5px;
+    margin: 5px 5px 5px 5px; 
+}
+
+footer{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'PT Sans Narrow';
+    font-size: 15px;
+    border: white 5px solid;
+    align-items: center;
+}
+
+footer h1{
+    margin: 0px 5px 0px 10px;
+}
+
+.social{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
