--- a/css/styles.css
+++ b/css/styles.css
@@ -16,20 +16,11 @@ header, footer{
     border-bottom-right-radius: 15px;
     
     background: #E8524D;
-    height: 300px;
-
-    background-image: url(../Images/ErikL.png);
-    background-size: 300px;
-    background-repeat: no-repeat; 
-    background-position-x: right;
 
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-}
-
-p{
-    line-height: 20px;
 }
 
 .hero-title{
@@ -40,9 +31,16 @@ p{
     font-weight: 1000; 
     color: white;
 
-    margin: 0px 300px 0px 10px;
+    margin: 0px 10px 0px 10px;
+
+    width: 500px;
     
 }
+
+p{
+    line-height: 20px;
+}
+
 
 
 a{
@@ -60,6 +58,7 @@ article{
 article h3, h4, p{
     color: white;
 }
+
 
 article{
     display: flex;
